tests/fixtures/errors/mutual_exclusion.h
/**
 * @nb
 */
class Foo {
public:
    /**
     * @nb
     * @nb_init
     * @nb_static
     */
    Foo();
};
